k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: order-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - guide.clever-meal.com
        - order-service.clever-meal.com
      secretName: hello-kubernetes-tls
  rules:
    - host: order-service.clever-meal.com
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80

    - host: guide.clever-meal.com
      http:
        paths:
          - backend:
              serviceName: strapi
              servicePort: 1337
